--- a/Slider/index.html
+++ b/Slider/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div class="custom_slider my_slider">
+    <div class="custom_slider">
         <div><img src="./img/Cat1.jpg" alt="cat1"></div>
         <div><img src="./img/cat2.jpg" alt="cat2"></div>
         <div><img src="./img/cat3.jpg" alt="cat3"></div>
